refactored code and started exercise 2

--- a/dia3/src/style.css
+++ b/dia3/src/style.css
@@ -6,3 +6,13 @@
   color: #2c3e50;
   margin-top: 60px;
 }
+
+.blue {
+  background-color: blue;
+  width: 100px;
+  height: 100px;
+}
+
+.not-blue {
+  display: none;
+}
