--- a/dia3/src/style.css
+++ b/dia3/src/style.css
@@ -45,3 +45,15 @@
 .with-color {
   display: block;
 }
+
+.colors {
+  width: 300px;
+  height: 157px;
+  border: 1px solid black;
+  margin: 10px 0px;
+}
+
+.colors option {
+  height: 30px;
+  outline: 1px solid black;
+}
