--- a/dia4/app/style.css
+++ b/dia4/app/style.css
@@ -1,12 +1,23 @@
+* {
+  margin: 0;
+}
+
 body {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #2c3e50;
-  margin-top: 60px;
+  /* margin-top: 60px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
 }
 
+h1 {
+  margin-bottom: 50px;
+}
 .error-message {
   display: none;
 }
@@ -50,16 +61,17 @@ input::placeholder {
 
 input {
   border-radius: 0px;
-  border: 1px solid #2c3e50;
+  border: 1px solid #e5edf6;
   padding: 10px 5px;
   margin: 10px
 }
 
-.submit-btn, .edit-save-btn {
+.submit-btn, .edit-save-btn, .cancel-save-btn {
   background-color: palegoldenrod;
   border-radius: 10px;
   border: 0px;
   padding: 10px;
+  margin: 0 10px;
   font-family: Avenir, Helvetica, Arial, sans-serif;
   color: #2c3e50;
 }
@@ -72,6 +84,32 @@ input {
   margin: 0 10px
 }
 
-.cars-form-edit {
-  display: none;
+.form-edit-modal {
+  width: 100%;
+  position: absolute;
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0);
+  transition: all .3s ease;
+  z-index: 1000;
+  background-color: white;
 }
+
+.cars-form-edit {
+  background-color: white;
+  padding: 10px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.expand {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position:fixed;
+  top: 10px;
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+  height: 100%;
+}
+
